--- a/results-summary-component-main/results-summary-component-main/styles.css
+++ b/results-summary-component-main/results-summary-component-main/styles.css
@@ -240,6 +240,67 @@ footer {
 
 /* Mobile Support */
 
-@media only screen and (min-width: 390px) {
+@media only screen and (max-width: 375px) {
+
+  .results-summary-component {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin: 10px;
+    bottom: -50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
 }
+
+@media only screen and (max-width: 582px) {
+
+  .results-summary-component {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin: 10px;
+    bottom: -50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+}
+
+@media(max-width: 414px) {
+
+  .results-summary-component {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin: 15px;
+    bottom: -50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+}
+
+
