--- a/results-summary-component-main/styles.css
+++ b/results-summary-component-main/styles.css
@@ -28,7 +28,7 @@ body {
 
 .your-result-box {
   background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
-  height: 32rem;
+  height: 34rem;
   width: 25rem;
   border-radius: 25px;
 }
@@ -39,6 +39,7 @@ body {
   align-items: center;
   margin-top: 2rem;
   font-size: 1.5rem;
+  font-weight: 800;
   color: hsla(241, 100%, 89%, 100%);
 }
 
@@ -81,6 +82,7 @@ body {
   display: block;
   margin-top: 12px;
   text-align: center;
+  font-weight: 500;
 }
 
 .summary-box {
@@ -110,7 +112,7 @@ body {
   border-radius: 10px;
   width: 20rem;
   padding: 1rem;
-  font-weight: bolder;
+  font-weight: bold;
   display: flex;
   align-items: center;
 }
@@ -121,6 +123,11 @@ body {
 
 .reaction-score {
   margin-left: 7.2rem;
+  color: hsla(224, 30%, 27%, 50%);
+}
+
+.reaction-score-num {
+  color: hsl(224, 30%, 27%);
 }
 
 .summary-score p:nth-child(2){
@@ -140,7 +147,12 @@ body {
 }
 
 .memory-score {
-  margin-left: 7.2rem;
+  margin-left: 7.3rem;
+  color: hsla(224, 30%, 27%, 50%);
+}
+
+.memory-score-num {
+  color: hsla(224, 30%, 27%);
 }
 
 .summary-score p:nth-child(3){
@@ -160,7 +172,12 @@ body {
 }
 
 .verbal-score {
-  margin-left: 8rem;
+  margin-left: 8.3rem;
+  color: hsla(224, 30%, 27%, 50%);
+}
+
+.verbal-score-num {
+  color: hsl(224, 30%, 27%);
 }
 
 .summary-score p:nth-child(4){
@@ -180,22 +197,34 @@ body {
 }
 
 .visual-score {
-  margin-left: 8rem;
+  margin-left: 8.5rem;
+  color: hsl(224, 30%, 27%, 50%);
+}
+
+.visual-score-num {
+  color: hsl(224, 30%, 27%)
 }
 
 
-button {
+button{
+  font-family: 'Hanken Grotesk', sans-serif; 
   display: block;
   margin-inline: auto;
-  background-color: hsl(224, 30%, 27%);
   padding: 18px;
-  border-radius: 1000px;
-  color: hsl(0, 0%, 100%);
+  margin-top: 3rem;
   width: 20rem;
-  margin-top: 2rem;
+  border-radius: 1000px;
   border: none;
-  font-weight: 500;
+  font-weight: 700;
   font-size: 18px;
+  cursor: pointer;
+  color: hsl(0, 0%, 100%);
+  background-color: hsl(224, 30%, 27%);
+}
+
+
+button:hover{
+  background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
 }
 
 footer {
@@ -208,3 +237,70 @@ footer {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+/* Mobile Support */
+
+@media only screen and (max-width: 375px) {
+
+  .results-summary-component {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin: 10px;
+    bottom: -50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+}
+
+@media only screen and (max-width: 582px) {
+
+  .results-summary-component {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin: 10px;
+    bottom: -50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+}
+
+@media(max-width: 414px) {
+
+  .results-summary-component {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin: 15px;
+    bottom: -50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+}
+
+
